# echemistpy-cli

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CITATION.cff  README.md  pyproject.toml
Samples/Echem/Biologic/Trial01_CV/: LC-Zn-1M Zn-alphaMnO2-CV_01mVs.mps  LC-Zn-1M Zn-alphaMnO2-CV_01mVs_01_OCV_C02.mgr  LC-Zn-1M Zn-alphaMnO2-CV_01mVs_01_OCV_C02.mpr  LC-Zn-1M Zn-alphaMnO2-CV_01mVs_02_CV_C02.mgr  LC-Zn-1M Zn-alphaMnO2-CV_01mVs_02_CV_C02.mpr  LC-Zn-1M Zn-alphaMnO2-CV_01mVs_D128_C02.sta
Samples/Echem/Biologic/Trial02_GCD/: ACETATE BUFFER CYCING.mps  ACETATE BUFFER CYCING_C01.mpr  ACETATE BUFFER CYCING_C01.mps
Samples/Echem/Biologic/Trial03_EIS/: EMD-2V-2mAh-1M+02M-40mL.mps  EMD-2V-2mAh-1M+02M-40mL_02_PEIS_C01.mgr  EMD-2V-2mAh-1M+02M-40mL_02_PEIS_C01.mpr
Samples/TXM/: 20230629_E1B_729.9x166.5y_specnorm_aliOF.hdf5.hdf5
Samples/XRD/ex situ/: αMnO2_Pristine_2022.UXD
Samples/XRD/operando/: opXRD_MSDP_XRD_01_300.tif
Samples/XRD/operando/Data/IS16_C/: 16_Ca.lis  16_Ca_f00001.xye  16_Ca_f00002.xye  16_Ca_f00003.xye  16_Ca_f00004.xye  16_Ca_f00005.xye  16_Ca_f00006.xye  16_Ca_f00007.xye  16_Ca_f00008.xye  16_Ca_f00009.xye  16_Ca_f00010.xye  16_Ca_f00011.xye  16_Ca_f00012.xye  16_Ca_f00013.xye  16_Ca_f00014.xye  16_Ca_f00015.xye  16_Ca_f00016.xye  16_Ca_f00017.xye  16_Ca_f00018.xye  16_Ca_f00019.xye  16_Ca_f00020.xye  16_Ca_f00021.xye  16_Ca_f00022.xye  16_Ca_f00023.xye  16_Ca_f00024.xye  16_Ca_f00025.xye  16_Ca_f00026.xye  16_Ca_f00027.xye  16_Ca_f00028.xye  16_Ca_f00029.xye  16_Ca_f00030.xye  16_Ca_f00031.xye  16_Ca_f00032.xye  16_Ca_f00033.xye  16_Ca_f00034.xye  16_Ca_f00035.xye  16_Ca_f00036.xye  16_Ca_f00037.xye  16_Ca_f00038.xye  16_Ca_f00039.xye  (+271 more)
Samples/XRD/operando/Data/IS16_C_fresh/: 16_C_fresh_f00001.xye  16_C_fresh_f00002.xye  16_C_fresh_f00003.xye  16_C_fresh_f00004.xye  16_C_fresh_f00005.xye  16_C_fresh_f00006.xye  16_C_fresh_f00007.xye  16_C_fresh_f00008.xye  16_C_fresh_f00009.xye  16_C_fresh_f00010.xye  16_C_fresh_f00011.xye
Samples/XRD/operando/Echem/A/: ZMO_C.mps  ZMO_C_C02.mgr  ZMO_C_C02.mpl  ZMO_C_C02.mpr  ZMO_C_C02.mpt  ZMO_C_C02.rve  ZMO_C_C02.txt  ZMO_C_C02_2ndrun.mps  ZMO_C_C02_2ndrun_C02.mgr  ZMO_C_C02_2ndrun_C02.mpl  ZMO_C_C02_2ndrun_C02.mpr  ZMO_C_C02_2ndrun_C02.rve  ZMO_C_C02_2ndrun_C02.txt  ZMO_C_C02_2ndrun_D120_C02.sta  ZMO_C_D120_C02.sta
Samples/XRD/operando/Echem/B/: ZMO_C.mps  ZMO_C_C02.mgr  ZMO_C_C02.mpl  ZMO_C_C02.mpr  ZMO_C_C02.mpt  ZMO_C_C02.rve  ZMO_C_C02.txt  ZMO_C_D120_C02.sta
docs/: cli-refactor-framework.md
script/: emsigma-0.2.2.post1-py3-none-any.whl
script/Characterization/EQCM/: EQCM.ipynb
script/Characterization/Echem/: Echem_Bacterial Cellulose.ipynb  Echem_PaperDos.ipynb  Echem_PaperUno.ipynb
script/Characterization/ICP-OES/: ICP-OES.ipynb
script/Characterization/SEM/: AGENTS.md  SEM.ipynb  SEM.tif  SEM2.tif  sem_utils.py
script/Characterization/STXM/: AGENTS.md  STXM.ipynb  stxm_utils.py
script/Characterization/TEM/: TEM-EDS.ipynb  TEM-EELS.ipynb  TEM-TEM.ipynb
script/Characterization/TGA/: TGA.ipynb
script/Characterization/XAS/EXAFS/: EXAFS_area.ipynb
script/Characterization/XAS/Exsitu_XAS/: exsituXAS.ipynb
script/Characterization/XAS/Kbeta/: Kbeta_2024.ipynb  Kbeta_2025_04.ipynb  Kbeta_PpaerDos.ipynb
script/Characterization/XAS/MeshMapping/: OperandoMesh_PaperDos.ipynb  OperandoMesh_V7.ipynb  ROIs.ipynb
script/Characterization/XAS/PreEdge/: PreEdge_2025.ipynb
script/Characterization/XAS/PreEdge/PreviousVersion/: PreEdge_2025_all.ipynb
script/Characterization/XAS/Wavelet/: Backup_Wavelet.ipynb  Wavelet.ipynb
script/Characterization/XAS/XANES/: Operando_cell2.ipynb  opXANES_cell2.ipynb  opXANES_cell3.ipynb
script/Characterization/XPS/: UPS.ipynb  XPS.ipynb
script/Characterization/XRD/: Exsitu_XRD.ipynb  XRD_MSPD_2025.ipynb  XRD_Operando_2024.ipynb  XRD_Operando_2025.ipynb
script/Figure/: AGENTS.md  colors.py  config.py  liuchzzyy.mplstyle
script/Figure/PaperDos/: Chapter_IV.ipynb  PaperDos_MS.ipynb  PaperDos_SI.ipynb
script/Figure/PaperTres/: PaperTres_Figure.ipynb
script/Figure/PaperUno/: PaperUno_Figure_MS.R1.ipynb  PaperUno_Figure_MS.ipynb  PaperUno_Figure_SI.R1.ipynb  PaperUno_Figure_SI.ipynb
scripts/: workflow_operando.py
src/echemistpy/analysis/: AGENTS.md  __init__.py  pipeline.py  registry.py
src/echemistpy/analysis/echem/: __init__.py  analyzer.py  capacity.py  columns.py  cycles.py
src/echemistpy/analysis/stxm/: __init__.py  analyzer.py
src/echemistpy/analysis/txm/: __init__.py  analyzer.py
src/echemistpy/analysis/xas/: __init__.py  analyzer.py  elements.py  fitting.py  plotting.py  processing.py
src/echemistpy/cli/: __init__.py  app.py  main.py
src/echemistpy/cli/commands/: __init__.py  convert_data.py  doctor.py  formats.py  inspect_data.py
src/echemistpy/data/: __init__.py  column_mappings.py  models.py  schema.py  standardize.py  storage.py  utils.py
src/echemistpy/io/: AGENTS.md  __init__.py  base_reader.py  column_mappings.py  contracts.py  conversion.py  loaders.py  plugin_manager.py  reader_utils.py  saver.py  standardizer.py  structures.py  summary.py  writer.py
src/echemistpy/io/plugins/: Echem_BiologicMPTReader.py  Echem_LanheCCSReader.py  Echem_LanheXLSXReader.py  TXM_MISTRAL.py  XAS_CLAESS.py  XRD_MSPD.py  ccs_parser.py  echem_biologic_mpr.py  echem_biologic_mpt.py  echem_lanhe_ccs.py  echem_lanhe_xlsx.py  xrd_mspd.py
src/echemistpy/plotter/: __init__.py  colors.py  contracts.py  liuchzzyy.mplstyle  output.py  registry.py  style.py  xas.py
src/echemistpy/plotter/echem/: __init__.py  chrono.py  common.py  cv.py  eis.py  gcd.py
tests/: test_bundle_api.py  test_cli.py  test_echem_analysis_plotter.py  test_echem_samples.py  test_public_api.py  test_reader_specs.py  test_txm_xas_analysis.py  test_xrd_mspd_reader.py
