[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64", "setuptools-scm>=8", "wheel"]

[project]
name = "echemistpy-cli"
version = "0.1.0"
description = "面向电化学数据的命令行读取、标准化和分析工具"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = {text = "CeCILL-B Free Software License Agreement (CECILL-B)"}
authors = [
  {name = "Cheng Liu", email = "liuchzzyy@gmail.com"},
]
keywords = ["electrochemistry", "materials characterization", "data analysis"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: CeCILL-B Free Software License Agreement (CECILL-B)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "xarray>=2025.6.1",
  "numpy>=2.2.6",
  "pandas>=2.2.3",
  "h5netcdf>=1.6.3",
  "scipy>=1.15.3",
  "matplotlib>=3.10.3",
  "typer>=0.26.7",
]

[project.optional-dependencies]
echem = [
  "openpyxl>=3.1.5",
]
xas = [
  "scikit-learn>=1.4.0",
  "lmfit>=1.2.2",
  "xraylarch>=0.9.78",
]
txm = [
  "h5py>=3.11.0",
  "scikit-image>=0.22.0",
  "scikit-learn>=1.4.0",
  "umap-learn>=0.5.5",
  "lmfit>=1.2.2",
]
xrd = []
all = [
  "echemistpy-cli[echem,xas,txm,xrd]",
]
dev = [
  "echemistpy-cli[all,test]",
  "ruff>=0.12.4",
  "ty>=0.0.5",
  "pre-commit>=3.0.0",
]
test = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "pytest-mock>=3.14.0",
  "pytest-benchmark>=4.0.0",
]

[project.urls]
homepage = "https://github.com/liuchzzyy/echemistpy-cli"
repository = "https://github.com/liuchzzyy/echemistpy-cli"
issues = "https://github.com/liuchzzyy/echemistpy-cli/issues"

[project.scripts]
echemistpy = "echemistpy.cli.app:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"echemistpy" = ["*.pyi"]
"echemistpy.data" = ["*.json", "*.yaml"]

[tool.ruff]
line-length = 200
preview = true
extend-exclude = [
  "src/echemistpy/plotter/PaperDos_MS.ipynb",
]

[tool.ruff.lint]
select = [
  "F",
  "E",
  "W",
  "G",
  "B",
  "C4",
  "N",
  "SIM",
  "ARG",
  "ERA",
  "PL",
  "RUF",
  "S",
]
extend-select = ["I"]
ignore = ["E501", "PLR2004", "ERA001", "RUF001", "RUF002", "RUF003"]
logger-objects = ["app.logger", "logger"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = [
  "S101",
  "ARG",
]
"src/echemistpy/io/plugins/echem_lanhe_ccs.py" = [
  "N806",
  "N815",
  "PLR0912",
  "PLR0914",
  "PLR0915",
  "PLR6301",
  "RUF046",
]
"src/echemistpy/io/plugins/TXM_MISTRAL.py" = [
  "N999",
]
"src/echemistpy/io/plugins/XAS_CLAESS.py" = [
  "N999",
]
"src/echemistpy/io/plugins/XRD_MSPD.py" = [
  "N999",
]
"src/echemistpy/analysis/stxm/analyzer.py" = [
  "PLW0717",
]
"src/echemistpy/analysis/xas/analyzer.py" = [
  "PLR0912",
  "PLR0913",
  "PLR0914",
  "PLR0915",
  "PLR0917",
  "PLW0717",
]
"src/echemistpy/analysis/xas/fitting.py" = [
  "ARG001",
  "B007",
  "N806",
  "PLR0912",
  "PLR0914",
  "PLR0915",
  "SIM102",
  "SIM108",
]
"src/echemistpy/analysis/xas/plotting.py" = [
  "B905",
  "E741",
  "PLR0913",
  "PLR0914",
  "PLR0915",
  "PLR0917",
]
"src/echemistpy/analysis/xas/processing.py" = [
  "ARG001",
  "E731",
  "SIM108",
]

[tool.pytest.ini_options]
addopts = ["--doctest-modules", "-p no:warnings"]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["src/echemistpy/"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "def __repr__",
]
ignore_errors = true

[tool.ty.src]
exclude = [
  "src/echemistpy/plotter/PaperDos_MS.ipynb",
]
